--- a/readme
+++ b/readme
@@ -1,3 +1,7 @@
-This repository is for sefp project
+This repository is the for our sefp project
+
 
 Project -----Zomato like app for bulk food catering
+
+Team--Ch.Sai Manideep IS201401014
+    --G.Sai Koushik   IS201401021
