readme for sefp project

--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-This repository is the for our sefp project
+This is the repository for our sefp project
 
 
 Project -----Zomato like app for bulk food catering
